resources/assets/sass/dashboard.scss
/* ... */
.edit-item {
    $label-height: 30px;
    margin-top: 10px;

    .CodeMirror {
        height: 300px;
        padding: 5px;

        &-code {
            margin-bottom: 10px;
        }
    }

    .picker__holder {
        overflow-y: hidden;

        .picker__button--today {
            white-space: nowrap;
        }

        .picker__select--year, .picker__select--month, .picker__month, .picker__day, .picker__weekday, .picker__footer {
            @include media-breakpoint-down(sm) {
                font-size: 16px;
            }
        }

        .picker__select--year, .picker__select--month {
            width: auto;
            height: 1.5em;
            padding: 0px;
        }
    }

    label {
        min-height: $label-height;
        line-height: $label-height;

        @include media-breakpoint-up(md) {
            margin-bottom: 0px;
        }
    }

    .text-display, .mkd-editor-container, input, select {
        margin-bottom: 15px;
    }

    input {
        display: block;
        width: 100%;

        &:not([type="file"]) {
            padding: 5px 8px;
            border: 1px solid darken($c-dashboard-light, 10%);
            border-radius: 2px;
            transition: border-color 150ms;

            &.error {
                border-color: $c-dashboard-error;
            }
        }

        &[type="file"] {
            height: $label-height;
            font-size: 14px;
        }

        &.date-picker {
            cursor: pointer;
        }
    }

    .current-image {
        margin-bottom: 15px;
        display: block;
        width: 125px;
        max-width: 100%;
    }

    .edit-button {
        margin-bottom: ($grid-gutter-width / 2);
        display: inline-block;
        padding: 5px 10px;
        border-radius: 5px;
        text-transform: uppercase;
        transition: background-color 150ms;
        cursor: pointer;

        &:hover, &:focus {
            text-decoration: none;
        }

        &.view {
            border: 1px solid darken($c-dashboard-dark, 5%);
            background-color: $c-dashboard-dark;
            color: $c-text-light;

            &:hover {
                background-color: lighten($c-dashboard-dark, 5%);
            }
        }

        &.delete {
            border: 1px solid darken($c-dashboard-delete, 5%);
            background-color: $c-dashboard-delete;
            color: $c-text-light;

            &:hover {
                background-color: lighten($c-dashboard-delete, 5%);
            }
        }
    }

    .back-button {
        float: left;
    }

    .submit-button {
        float: right;
        transition: opacity 150ms;

        &.no-input {
            opacity: 0.65;
            pointer-events: none;
        }
    }

    .back-button, .submit-button {
        margin: 20px 15px 15px 15px;

        @include media-breakpoint-down(sm) {
            float: none;
            width: calc(100% - 30px);

            &:first-child {
                margin-top: 20px;
                margin-bottom: 5px;
            }

            &:last-child {
                margin-top: 5px;
                margin-bottom: 20px;
            }
        }

        &.no-horizontal-margins {
            margin-right: 0px;
            margin-left: 0px;

            @include media-breakpoint-down(sm) {
                width: 100%;
            }
        }
    }

    &.user-profile-image {
        display: block;
        width: 100%;
        max-width: 150px;

        @include media-breakpoint-down(sm) {
            margin: $grid-gutter-width auto;
        }

        .image-display {
            @include aspect-ratio(1, 1);
            position: relative;
            width: 100%;
            border: 1px solid darken($c-dashboard-light, 10%);
            border-radius: 3px;
            background-position: center center;
            background-size: cover;
            background-repeat: no-repeat;
        }

        .image-buttons {
            margin-top: 20px;
            display: flex;
            justify-content: space-around;

            input {
                display: none;
            }

            .image-upload-button, .image-delete-button {
                @include aspect-ratio(1, 1);
                display: block;
                width: 40px;
                min-height: 0;
                border: 1px solid darken($c-dashboard-light, 14%);
                border-radius: 3px;
                background-color: darken($c-dashboard-light, 10%);
                background-position: center center;
                background-size: 50% auto;
                background-repeat: no-repeat;
                font-size: 0px;
                line-height: 1;
                cursor: pointer;

                &:hover {
                    background-color: darken($c-dashboard-light, 7%);
                }
            }

            .image-upload-button {
                background-image: url("/img/dashboard/upload.svg");
                transition: background-color 150ms;
            }

            .image-delete-button {
                background-image: url("/img/dashboard/trash-alt.svg");
                opacity: 1;
                transition:  background-color 150ms, opacity 150ms;

                &.inactive {
                    opacity: 0.35;
                    pointer-events: none;
                }
            }
        }
    }
}

#loading-modal {
    z-index: 1000;
    position: fixed;
    top: 0px;
    left: 0px;
    visibility: hidden;
    width: 100%;
    height: 100%;
    background-color: fade-out(lighten($c-dashboard-light, 1%), 0.6);
    opacity: 0;
    transition: opacity 250ms;

    .spinner-container {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
    }
}
/* ... */

